White iphone UI alignment fixed.

--- a/app/scss/modules/_iphones.scss
+++ b/app/scss/modules/_iphones.scss
@@ -16,6 +16,11 @@
 		.ui{
 			top: 7.7%;
 			right: 9.3%;
+
+			img{
+				position: absolute;
+				bottom: 0;
+			}
 		}
 	}
 
